--- a/pythoncookbook/datastructure/实现优先级队列.ipynb
+++ b/pythoncookbook/datastructure/实现优先级队列.ipynb
@@ -56,6 +56,8 @@
   {
    "cell_type": "markdown",
    "source": [
+    "- 这个heappush里面传入的是三个变量构成的元组\n",
+    "本身heappush接受的参数是(heap,item),按item进行排序\n",
     "- heap函数的使用，heappush,heappop\n",
     "- heap的算法\n",
     "- heap作用在一个可迭代对象上，然后按照heap的算法排序？"
