把排序的内容移除了

--- a/pythoncookbook/datastructure/字典保持输入顺序(collection_orderedDict).ipynb
+++ b/pythoncookbook/datastructure/字典保持输入顺序(collection_orderedDict).ipynb
@@ -297,55 +297,7 @@
    ],
    "source": [
     "c={key:a[key] for key in a.keys() - {'z','w'}}\n",
-    "print(c)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "#字典的最大最小值排序\n",
-    "prices = {\n",
-    "    'ACME': 45.23,\n",
-    "    'AAPL': 612.78,\n",
-    "    'IBM': 205.55,\n",
-    "    'HPQ': 37.20,\n",
-    "    'FB': 10.75\n",
-    "}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(612.78, 'AAPL')"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 7
-    }
-   ],
-   "source": [
-    "max(prices,key=lambda k:prices[k])\n",
-    "max(prices)\n",
-    "max(zip(prices.values(),prices.keys()))"
+    "print(c)\n"
    ],
    "metadata": {
     "collapsed": false,
