--- a/pythoncookbook/迭代器与生成器/构造带有__iter__方法的容器.ipynb
+++ b/pythoncookbook/迭代器与生成器/构造带有__iter__方法的容器.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from IPython.core.interactiveshell import InteractiveShell\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -48,15 +48,16 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% \n"
+     "name": "#%% \n",
+     "is_executing": false
     }
    },
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "root=Node(0)\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
@@ -107,7 +108,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 11
+     "execution_count": 10
     },
     {
      "data": {
@@ -115,13 +116,23 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 11
+     "execution_count": 10
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 10
     }
    ],
    "source": [
     "from collections import Iterator\n",
     "from collections import Iterable\n",
     "isinstance(root,Iterator)\n",
+    "root1=root.__iter__()\n",
+    "isinstance(root1,Iterator)\n",
     "isinstance(root,Iterable)"
    ],
    "metadata": {
@@ -134,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "class Countdown:\n",
@@ -165,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
