--- a/pythoncookbook/迭代器与生成器/迭代器生成器概览.ipynb
+++ b/pythoncookbook/迭代器与生成器/迭代器生成器概览.ipynb
@@ -25,12 +25,142 @@
     "    - 列表生成式的[]换为()\n",
     "    - 函数里面加入yield关键字,该函数只能用于迭代操作，因为只对next()响应 \n",
     "- 内存消耗少\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "- 可以方便的实现迭代器对象，而不用去维护状态信息\n",
+    "#所谓鸭子语言，就是有这种属性，有这种方法，就可以操作。python  本来就对数据类型没有很高的要求"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity='all'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "A's __iter__method is called\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 14
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 14
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 14
+    },
+    {
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 14
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "#而python的迭代协议需要__iter__()方法返回一个实现了__next()__方法的迭代器对象\n",
+    "from collections import Iterable,Iterator\n",
+    "#只要实现了__iter__方法就是Iterable\n",
+    "class A():\n",
+    "    def __iter__(self):\n",
+    "        print('A\\'s __iter__method is called')\n",
+    "        return B()\n",
+    "        pass\n",
+    "class B():\n",
+    "    def __iter__(self):\n",
+    "        pass\n",
+    "    def __next__(self):\n",
+    "        pass\n",
+    "a=A()\n",
+    "a1=iter(a)\n",
+    "isinstance(a,Iterator)\n",
+    "isinstance(a1,Iterator)\n",
+    "isinstance(A(),Iterable)\n",
+    "isinstance(A(),Iterator)\n",
+    "isinstance(B(),Iterator)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "for循环(迭代)实现方式，也是对于Iterator进行操作\n",
+    "\n",
+    "而对于以下的数据结构，只是Iterable,即只实现了__iter()__方法\n",
+    "\n",
+    "for循环对这些数据结构作用时，是调用他们的__iter()__方法，而他们的__iter()__方法会返会一个实现了__next()__方法的迭代器对象"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "strs='helloworld'\n",
+    "lss=[1,2,3,4]\n",
+    "sets={1,2,3,4}\n",
+    "tuples=(1,2,3,4)\n",
+    "stri=strs.__iter__()\n",
+    "stri.__next__()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
