--- a/pythoncookbook/迭代器与生成器/不同集合元素上的串行迭代(itertoos.chain()比先合并再迭代高效.ipynb
+++ b/pythoncookbook/迭代器与生成器/不同集合元素上的串行迭代(itertoos.chain()比先合并再迭代高效.ipynb
@@ -2,13 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "<class 'itertools.chain'>\n1\n2\n3\nx\nx\n1\n2\n3\n4\nh\ne\nl\nl\no\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
-    "\n"
+    "from itertools import chain\n",
+    "a=[1,2,3]\n",
+    "b=['x','x']\n",
+    "c=(1,2,3,4)\n",
+    "d='hello'\n",
+    "\n",
+    "s=chain(a,b,c,d)\n",
+    "print(type(s))\n",
+    "#list(s)\n",
+    "for i in s:\n",
+    "    print(i)"
    ]
   }
  ],
@@ -29,6 +50,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
