--- a/pythoncookbook/迭代器与生成器/迭代器生成器概览.ipynb
+++ b/pythoncookbook/迭代器与生成器/迭代器生成器概览.ipynb
@@ -32,69 +32,86 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "outputs": [],
-   "source": [
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity='all'"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity='all'"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "A's __iter__method is called\n"
-     ],
-     "output_type": "stream"
+     ]
     },
     {
      "data": {
-      "text/plain": "False"
+      "text/plain": [
+       "False"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 14
+     "output_type": "execute_result"
     },
     {
      "data": {
-      "text/plain": "True"
+      "text/plain": [
+       "True"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 14
+     "output_type": "execute_result"
     },
     {
      "data": {
-      "text/plain": "True"
+      "text/plain": [
+       "True"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 14
+     "output_type": "execute_result"
     },
     {
      "data": {
-      "text/plain": "False"
+      "text/plain": [
+       "False"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 14
+     "output_type": "execute_result"
     },
     {
      "data": {
-      "text/plain": "True"
+      "text/plain": [
+       "True"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -118,34 +135,33 @@
     "isinstance(A(),Iterable)\n",
     "isinstance(A(),Iterator)\n",
     "isinstance(B(),Iterator)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "for循环(迭代)实现方式，也是对于Iterator进行操作\n",
     "\n",
     "而对于以下的数据结构，只是Iterable,即只实现了__iter()__方法\n",
     "\n",
     "for循环对这些数据结构作用时，是调用他们的__iter()__方法，而他们的__iter()__方法会返会一个实现了__next()__方法的迭代器对象"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "strs='helloworld'\n",
@@ -154,13 +170,7 @@
     "tuples=(1,2,3,4)\n",
     "stri=strs.__iter__()\n",
     "stri.__next__()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
