--- a/pythoncookbook/datastructure/当sort不支持的比较时(operator_attrgetter).ipynb
+++ b/pythoncookbook/datastructure/当sort不支持的比较时(operator_attrgetter).ipynb
@@ -1,4 +1,4 @@
-﻿{
+{
  "cells": [
   {
    "cell_type": "code",
@@ -12,10 +12,10 @@
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<class '__main__.User'>\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
@@ -31,55 +31,57 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'User' and 'User'",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-3-e74a4bebdfb2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0musers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mUser\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m21\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mUser\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m25\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mUser\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m18\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0musers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'User' and 'User'"
      ],
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'User' and 'User'",
      "output_type": "error"
     }
    ],
    "source": [
     "users=[User(21),User(25),User(18)]\n",
     "sorted(users)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "[User(18), User(21), User(25)]"
+      "text/plain": [
+       "[User(18), User(21), User(25)]"
+      ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from operator import  attrgetter\n",
     "sorted(users,key=attrgetter('user_id'))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   }
  ],
  "metadata": {
