--- a/pythoncookbook进阶版/datastructure/实现优先级队列(heapq).ipynb
+++ b/pythoncookbook进阶版/datastructure/实现优先级队列(heapq).ipynb
@@ -3,18 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "outputs": [],
-   "source": [
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = \"all\""
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\""
+   ]
   },
   {
    "cell_type": "code",
@@ -33,6 +33,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "class PriorityQueue:\n",
@@ -44,60 +51,62 @@
     "        self._index+=1\n",
     "    def pop(self):\n",
     "        return heapq.heappop(self._queue)[-1]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "- 这个heappush里面传入的是三个变量构成的元组\n",
     "本身heappush接受的参数是(heap,item),按item进行排序\n",
     "- heap函数的使用，heappush,heappop\n",
     "- heap的算法\n",
     "- heap作用在一个可迭代对象上，然后按照heap的算法排序？"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'Tom'"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 25
-    }
-   ],
-   "source": [
-    "ls=[]\n",
-    "heapq.heappush(ls,(-5,0,'Tom'))\n",
-    "heapq.heappop(ls)[-1]"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tom'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls=[]\n",
+    "heapq.heappush(ls,(-5,0,'Tom'))\n",
+    "heapq.heappop(ls)[-1]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "class Item:\n",
@@ -105,125 +114,126 @@
     "        self.name=name\n",
     "    def __repr__(self):\n",
     "        return 'Item({!r})'.format(self.name)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "- 魔法方法__repr__"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "- 魔法方法__repr__"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "outputs": [],
-   "source": [
-    "q=PriorityQueue()"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%  \n",
      "is_executing": false
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "q=PriorityQueue()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "q.push(Item('foo'),1)\n",
     "q.push(Item('bar'), 5)\n",
     "q.push(Item('spam'), 4)\n",
     "q.push(Item('grok'), 1)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Item('grok')"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 23
-    }
-   ],
-   "source": [
-    "q.pop()"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item('grok')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.pop()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Item('bar')"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 22
-    },
-    {
-     "data": {
-      "text/plain": "Item('spam')"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 22
-    },
-    {
-     "data": {
-      "text/plain": "Item('foo')"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 22
-    }
-   ],
-   "source": [
-    "q.pop()\n",
-    "q.pop()\n",
-    "q.pop()"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item('bar')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Item('spam')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Item('foo')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.pop()\n",
+    "q.pop()\n",
+    "q.pop()"
+   ]
   }
  ],
  "metadata": {
